# src/main/java/com/aditya/lms/dto/CourseView.java
@@ -1,0 +1,11 @@
+package com.aditya.lms.dto;
+
+import com.aditya.lms.entity.Course;
+
+public record CourseView(
+        Course course,
+        Long userId,
+        Boolean isCourseCompleted,
+        Integer completedModuleCount,
+        Integer totalModuleCount) {
+}
